--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "directories": {
     "lib": "lib",
-    "test": "tests"
+    "test": "jest"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/manuelg139/Team-Profile-Generator#readme",
   "dependencies": {
+    "email-validator": "^2.0.4",
     "inquirer": "^8.0.0",
     "jest": "^26.6.3"
   }
